--- a/uni/Systemtrafo/5_Sitzung_30-11-2017.md
+++ b/uni/Systemtrafo/5_Sitzung_30-11-2017.md
@@ -1,4 +1,4 @@
-# 4. Spanien (dritte Demokratisierungswelle)
+# 5. Spanien (dritte Demokratisierungswelle)
 Spanien verfügte kaum über demokratische Erfahrung vor Etablierung des autoritären Regimes
 - Erfahrungen lagen außerdem weit zurück und geprägt durch Konflikte & Stabilität
 
@@ -15,7 +15,7 @@ auch das Staatskonzept Primo de Riveras konnte die sich im Aufbruch befindliche 
 - Ausbau eines autoritären Ständestaates mit faschistischen Elementen scheiterte schon in den Anfängen
 - unter wachsenender Opposition von Arbeitern, Gewerkschaften, Intellektuellen & schließlich sogar Teilen der Armee brach dieses fragile autoritäre System zusammen
 
-## 4.1 Gründung der ersten Demokratie (Zweite Spanische Republik)
+## 5.1 Gründung der ersten Demokratie (Zweite Spanische Republik)
 1931 Gründung der Zweiten Spanischen Republik (1931-1936/1939)
 
 Übergang zur Demokratie verlief friedlich
@@ -35,7 +35,7 @@ Zweite Spanische Republik scheiterte an extremter Kumulation ihrer Probleme & st
 - führten zwar nicht zum Zusammenbruch der Demokratie, aber motivierten bedeutende Teile der Armee unter General Francisco Franco zum bewaffneten Angriff auf die Republik
   - dies mündete in langem Bürgerkrieg mit Zehntausenden von Todesopfern (1936-1939)
 
-## 4.2 Das institutionalisierte Führerregime Francos
+## 5.2 Das institutionalisierte Führerregime Francos
 Opfer des Krieges, den Francisco als *cruzada* (Kreuzzug) bezeichnete, prägten & spalteten das Land bis in die 1970er (*das* traumatische Erlebnis Spaniens im 20.Jhd)
 
 Kern der frankistischen Revolte war zunächst militärisch
@@ -54,7 +54,7 @@ Regime war auf die Person Francos zugeschnitten
 
 Bürgerkriegstrauma & unterdrückte Linke boten zudem mit latenter Gefahr einer erneuten Polarisierung ein erhebliches Risikopotential für jeden demokr. Regimewechsel
 
-## 4.3 Regimeübergang: Die von oben gelenkte *reforma pactada*
+## 5.3 Regimeübergang: Die von oben gelenkte *reforma pactada*
 Herrschaftsbasis des autoritären Regimes war schon vor Francos Tod (Nov 1975) brüchig geworden
 - Kirche hatte aktive Unterstützung entzogen
 - neue Industrieelite betrachtete Diktatur als hinderlich für weitere wirtsch Expansion
@@ -102,7 +102,7 @@ dritte Phase von Juni 1976 bis Dezember 1978 war von Verhandlungen zw reformorie
   - der Inhalt der demokr Verfassung (1978)
 - Beginn der Demokratieinstitutionalisierung
 
-## 4.4 Institutionalisierung der Demokratien: Der ausgehandelte Institutionalisierungsprozess
+## 5.4 Institutionalisierung der Demokratien: Der ausgehandelte Institutionalisierungsprozess
 Institutionalisierung der Demokratie erwies sich von allen drei südeuropäischen Ländern in Spanien am schwierigsten
 - weder Institutionen noch alte Herrschaftseliten konnten durch einen radikalen Bruch beseitigt/entmachtet werden
   - Opposition dafür zu schwach und Vetoakteur Militär zu mächtig
@@ -160,3 +160,96 @@ Ernennung von Adolfo Suarez zum Ministerpräsidenten durch König Juan Carlos mu
 - Legitimation königlicher Ernennung öffnete Suarez zusätzlichen Handlungsspielraum, den dieser durch demokr Wahl ggü den autoritären Vetokräften nie hätte erhalten können
 
 ![typs](./img/typs.png "typs")
+
+
+### 5.4.1 Die konstitutionelle Konsolidierung: Regierungssysteme 
+- von den drei Verfassung (SPA, GR, PORT) schrieb allein spanische von Anfang an ein rein parlamentarisches Regierungssystem vor. Spanische Regierung dem Parlament verantwortlich und kann von diesem durch ein konstruktives Misstrauensvotum abgesetzt werden. 
+- Ministerpräsident kann Parlament in Zusammenwirkung mit dem Staatsoberhaupt auflösen. Kompetenzen zwischen Parlament und Regierung sowie zwischen Staatsoberhaupt und Kabinett eindeutig abgegrenzt und verleihen  der Regierung und dem Ministerpräsident eine starke Stellung 
+- konstruktive Element des Misstrauensvotum stärkt zusätzlich Stabilität des Kabinetts
+- Verhältnis Parlament-Regierung-Staatsoberhaupt so geregelt, dass es die Konsolidierungsimperative der Regierungsstabilität, Entscheidungseffizient und Entscheidungskontrolle optimal erfüllen kann 
+- unklarer als horizontale ist die vertikale Gewaltenteilung in Spanien -> mangelnde Präzision der konstitutionellen Beziehungen zwischen Zentralstaat und Regionen die Institutionalisierung der Demokratie entlastet hat, so belastete sie die demokratische Konsolidierung 
+- durch Konflikte zwischen Zentralstaat und Regionen hat sich Verfassungsgericht als Schiedsrichter bewährt und von politischen Kontrahenten akzeptiert (abgesehen von terroristischer ETA und Herri Batasuna) 
+- drei Jahrzehnte nach dem Regimewechsel haben Regierungen (SPA, GR; PORT) hinsichtlich ihrer Amtsdauer (Stabilität) westeuropäische Standards erreicht. -> spanische Regierungen hatten von 1977 bis 2008 eine durchschnittliche Amtszeit von 36,8 Monaten; über westeuropäischem Durchschnitt  
+
+### 5.4.2 Die repräsentative Konsolidierung: Parteiensysteme und Verbände 
+Parteiensysteme
+- schnelle Konsolidierung der Parteiensysteme hat wesentlich zur erfolgreichen Konsolidierung der Demokratien beigetragen. -> These anhand von vier für Konsolidierung relevante Dimensionen der Parteiensysteme expliziert 
+
+Fragmentierung
+- Fragmentierung kein Problem und im westeuropäischen Durchschnitt (Merkel) 
+- bis 1981 dominierten Mitte-Rechts Partei UCD und die Mitte-Links Partei PSOE in der Wählergunst mit 65% der Wählerstimmen, Rest ging an Kommunisten ca. 10% und reaktionäre Alianza Popular 7% (später PP) 
+- nach dem Zerfall der Regierungspartei UCD dominierte die sozialdemokratische PSOE die 1980er Jahre
+- mit der Reform der PP zu einer modernen konservativen Partei funktioniert das spanische Parteiensystem fast nach dem Muster eines Zweiparteiensystems
+- kommunistisch dominierte Wahlallianz "Izquierda Unidad" (UI) und kleineren Regionalparteien dienten als informelle Mehrheitsbeschaffer 
+- moderate Fragmentierung der Parteiensysteme stellte keine Konsolidierungsprobleme dar -> Beleg: effektive Parteienzahl zwischen 3 und 4 sowie Fragmentierungsindex leicht über europäischen Durchschnitt
+
+Polarisierung und Antisystemparteien: Polarisierung eines Parteiensystems lässt sich anhand ideologischer Distanz zwischen relevanten linken und rechten Flügelparteien des Parteiensystems messen (Sartori) 
+- keine vergleichbaren Surveydaten, daher Messung anhand der Einschätzung ob sich in Parteiensystemen am linken oder rechten Rand als Antisystemparteien etablieren konnten
+- extreme Rechte in keinem der drei Länder Parteien etabliert -> unter Wählerzuspruch (durch Diskreditierung überwundener Rechtsdiktatur und Wählerpotential nicht eingebunden; in Spanien Partei PP) 
+- auch linke mit keiner destabilisierenden Wirkung (in 1970ern gemäßigte eurokommunisitsche Partei Spanien (PCE) ließ sich insbesondere nach 1977 in Politik des demokratischen Konsens einbinden u.a. Moncloa-Pakete und somit Beitrag zur Stabilisierung )
+- in Spanien starke zentripetale Wettbewerbstendenzen (Morlino) 
+
+Volatilität: Summe der Netto-Wählergewinne und Netto-Wählerverluste der relevanten Parteien von Wahl zu Wahl gemessen 
+- niedrige Wählerfluktuation weist auf Grad der Konsolidierung des Parteiensystems hin 
+- durchschnittliche Volatilitätsrate der westeuropäischen Staaten betrug in 1980er 9,6% -> Spanien mit höhrerer Fluktuation in ersten freien Wahlen Mitte 1970er bis Mitte 1990er; hier 16,9% 
+- Stabilität der Wählerbindung geringer als im Durchschnitt der etablierten westeuropäischen Demokratien ausgeprägt, mit fallender Tendenz -> somit auch Wählerfluktuation ohne destabilisierende Anomalien 
+
+Kritische Wahlen: dramatische Wählerverschiebung bei einer Parlamentswahl 
+- kritisch, weil zunächst offen, ob dekonsolidierendes dealignment in konsolidierendes realignment einer erneuten Wähler-Partei Bindung mündet 
+- tritt erneute Anbindung nicht ein, bleibt Konfiguration des Parteiensystems instabil -> in nicht konsolidierten Demokratien mit erheblich destabilisierendem Potential - vor allem der Fall bei schneller Abfolge dramatischer Wählerverschiebung zwischen Parteilagern ("interbloc volatility), Regierungsinstabilitäten induziert und diese zu wiederholten "U-Turns" der Regierungspolitik führen
+- anhaltende Volatilität kann in Parteiverdrossenheit münden, im schlechtesten Fall Demokratieverdrossenheit
+- bei raschem "realignment" auf kritische Wahl, kann dies möglicherweise Zäsur hin zu stabilem Parteisystem darstellen 
+- in Spanien 1982; nach der Wahl stabilisierte sich das Parteisystem wieder - Parteisystem in gewissem Maße eingefroren (Lipset und Rokkan) 
+
+Verbände in den industriellen Beziehungen: 
+- Konsolidierung der funktionalen Interessenrepräsentation dauerte bei großen Verbänden von Kapital und Arbeit länger als erste Konsolidierung der Parteien und Parteisysteme (Schmitter) 
+- vor allem Herausbildung stabiler Verhandlungsmuster zwischen Gewerkschaften und Arbeitgeberverbänden erwies sich als schwierig 
+- industrielle Beziehungen weder dem syndikalistischen noch korporatistischen Typ (Beyme) zuzuordnen 
+- von Organisationsstruktur ähneln spanischen eher dme ersten Typus, in ihrer Verhaltensweise dem zweiten Typus angenähert
+
+Spanien: 
+- kollektive Selbstorganisation sozioökonomischer Interessen und ihre Aktions- wie Kooperationsfähigkeit waren zu Beginn der Demokratisierung in 1970ern nur gering ausgebildet (Perez Diaz) 
+- Unternehmer, die unter Franco ihre kollektive Interessensvertretung weitgehend dem Staat überlassen hatten, sahen aufgrund fehlender freier Gewerkschaften und der Wahrnehmung ihrer Interessen durch autoritär-dominanten Staat keine zwingenden Gründe zum Aufbau eigener starker Interessensverbände 
+- in Transitionsphase entstand daher erst 1977 mit Fusion von drei Einzelverbänden in der Dachorganisation CEOE ein zentraler Unternehmerverband. Mit einem Organisationsgrad von ca. 80% entwickelte sich dieser schnell zur quasi-monopolistischen Interessenorganisation der Unternehmer (Merkel) 
+-> für Arbeitgeberseite günstige organisatorische Voraussetzungen für konzentrierte Wirtschaftspolitik 
+- spanische Gewerkschaften zu Beginn der Demokratisierung gut organisiert, weil sie auf stabilen Organisationskerne der Endphase des Franco-Regimes "Comisiones Oberas" zurückgreifen konnten, doch kam es in Gewerkschaftsbewegung nach 1975 nie zu einer vergleichbaren Konzentration wie auf Arbeitgeberseite -> Grund: Gewerkschaften richtungspolitisch in kommunistische (CCOO), sozialisitische (UGT) und regionalisitsch-autonomisitsche (ELA-STV) gespalten; Representativität mit Organisationsgrad von ca. 10% zu zählt zu niedrigsten in Westeuropa 
+- trotz dessen wurden in einer entscheidenden Phase zwischen 1977 und 1986 mehrere Wirtschafts- und Sozialpakete zwischen Gewerkschaften, der CEOE und dem Staat geschlossen. Inhalte betrafen politische, wirtschaftliche und soziale Fragen
+- trotz niederigen Repräsentationsgrad und organisatorischen Fragmentierung hielten Gewerkschaften Verpflichtung zur Lohnzurückhaltung ein
+- Unternehmerverbad konnte Investitionsversprechen gegegnüber Verbandsklientel nicht durchsetzen und Regierug nach 1980 ihre wirtschafts und sozialpolitischen Verpflichtungen einhalten 
+-> Gewerkschaften kündigten daher die sozioökonomischen Pakte im Jahr 1986 -> Bruch zwischen sozialisitschen Regierung und Gewerkschaften, welcher das System nicht gefährden konnte 
+- eigentliche Effekte der Pakte bestand darin Stabilisierung der Demokratie in einer noch frühren Phase der Transition durch die Moncloa Pakte von 1977 zu gewährleisten, hier wurden wichtige politische Reformmaßnahmen vereinbart, eingehalten und in der Verfassung von 1978 verankert (Bernecker) 
+- Bedeutung der Pakte vor allem in Erzeugung eines politischen Klimas des Kompromisses und des Konsenses zwischen wichtigsten politischen und gesellschaftlichen Kräften 
+- vor allem linke Parteien und Gewerkschaften leisteten für erfolgreiche  Institutionalisierung und Konsolidierung der Demokratie bei, indem sie 1977-1981 ihre politischen Ziele und Mittel mäßigten und damit der Verletzlichkeit der jungen Demokratie diszipliniert Rechnung trugen 
+
+### 5.4.3 Die Integration der Vetoakteure 
+- kennzeichnend für postautoritäre Umbrüche, dass vor allem Akteure (Elitegruppen) des alten Regimes, extrakonstitutionelle Vetorolle gegenüber zivilen demokratischen Politik beanspruchen 
+- mächtigste und bedrohlichste Vetoakteur für Demokratie ist das Militär. Dieser ist vor allem dann ein Risiko, wenn es mit dem alten Regime eng verbunden war oder gar den Herrschaftskern gebildet hat. -> in Spanien der Fall 
+- Militärs mussten aus eigenem Interesse verhindern, dass sie unter den autoritären Regime verübten Verbrechen zur Verantwortung gezogen werden, dennoch in Demokratie Hüter der traditionellen Werte wie Nation. 
+- spanischste Militär gefährlichster Vetoakteur (i.A. von Griechenland und Portugal), Beispiel für "poder fatico", also einer faktischen Vetomacht gegenüber den Demokratisierungsprozessen 
+- Franco Regime zu keinem Zeitpunkt echte Militärdiktatur, doch übten Militärs bis zu Francos Tod bedeutenden regimeinterne Kontrollfunktionen aus und besetzten regelmäßig wichtige Spitzenämter in der Regierung, Justig und Verwaltung
+- nach Francos Tod signalisierte großer Teil der Armeeführung ihr Misstrauen gegenüber Reformen und ließen wenig Zweifel an Interventionsbereitschaft gegenüber zu weit gehende Liberalisierungsreformen etc. 
+- einige Generäle äußérten Unmut über Legalisierung der kommunistischen Partei (PCE) in der Regierung Suarez; noch deutlicher gegen Reformprojekt der politischen Dezentralisierung u.a. Furcht vor "Verrat an Francos Erbe" 
+- zunehmende Anzahl an getöten Militärs durch Terroranschläge der ETA versträkten Skepsis gegenüber Demokratiesierung 
+- keiner der UCD Regierungen gelang es die Armee zur Zurückhaltung zu bewegen -> Politik hatte sich an explizite und implizite Interventionsdrohungen auszurichten -> in Regierungszeit der UCD 1977-82 offener Widerstand gegen weiteren Reformprozess -> Enthüllung von Putschplänen des Militärs, Offiziere konnten mit Nachsicht der Militärgerichte rechnen
+- 23.02.1981 offener Putsch. Einheiten der paramilitischen Guardia Civil die Cortes besetzten und Panzereinheiten in Valencia Kasernen verließen -> König zu verdanken, dass sich Putsch nicht ausweitete und somit scheiterte
+- erst nach Wahlsieg der Sozialisten 1982 verlor militärischer Einfluss ihren bedrohlichen Charakter 
+- sozialisitische Regierung unter Felipe Gonzales leitete einschneidende Reformmaßnahmen innerhalb der Armee ein, vor allem deren Modernisierung und Professionalisierung. Eintritt in NATO half dabei 
+- erst als strategische Schlüsselpositionen auf der militärischen Ebene mit demokratieloyalen Offizieren besetzt wurden und korporative Privilegien der Armee 1984 in einem Gesetzpaket abgeschafft wurden, konnte von einer erfolgreichen Integration der Streitkräfte in neue spanische Demokratie geredet werden
+- neben Militär war terroristische Organisation ETA größte Bedrohung für Demokratie. Baskische Nationalisten versuchten immer wieder durch Attentate den Demokratisierungsprozessen zu destabilisieren  und die Unabhängigkeit des Baskenlandes zu erzwingen -> hauptsächlich in der 1. Konsolidierungsphase stark im radikal-nationalisitschen Bewegungsmilieu verankert
+=> spätestens seit Mitte der 1980er Jahre wurde die spanische Demokratie nicht mehr von Vetoakteuren bedroht 
+
+### 5.4.4 Demokratische Legitimität und Bürgergesellschaft 
+- Demokratie dann konsolidiert, wenn in der Gesellschaft demokratische Einstellungen und Werte mehrheitlich herausgebildet werden, Bürger müssen demokratisches System unterstützen -> somit Legitimität und solide "civic culture" (Almond und Verba) oder gar "civil society" (Merkel und Lauth) stabilisiert 
+- stabile Legitimität ist Immunitätsreserve, die Demokratien benötigen, damit sie als Herrschaftsordnung auch interne und externe wirtschaftliche und politische Krisen überstehen 
+- politisches System niemals in allen Teilen von allen Gruppen einer Gesellschaft als vollkommen legitim angesehen, daher "relativer Legitimitätsbegriff" (Morlino und Montero), der die Intensität und Qualität des "Legitimitätsglaubens" (Weber) einer Gesellschaft widerspiegelt 
+- zwei grundsätzliche Dimensionen der politischen Legimität: "diffuse supprt" und "specific support" (Easton) aus diesen beiden Begriffen konstruieren Morlino und Montero vier Idealtypen von Bürgern in ihren Einstellungen gegenüber der Demokratie. 
+
+1. full democrats: "überzeugte Demokraten", die die demokratische Legitimität bedingungslos anerkennen und Demokratien als effiziente Systeme betrachten.
+2. critics: "kritische Demokraten", die die Demokratie der Autokratie vorziehen, aber gleichzeitig ihr eigenes demokratisches System als ineffizient wahrnehmen.
+3. satisfied: "Schönwetterdemokraten", die zwar ihr demokratisches System als effizient wahrnehmen, aber unter Umständen auch ein autoritäres System akzeptieren würden
+4. anti-democrats: lehnen Demokratie als Herrschaftsordnung ab 
+
+- Spanier auf Frage ob sie Demokratien Autokratien vorziehen mit 78% Zustimmung, EU Durchschnitt 78% 
+- Parteien am wenigsten vertraunswürdig in den drei Ländern -> Gründe: häufige Involvierung in Korruption, Herausstellung der Parteienskandale, negative Wahrnehmnung des Konfliktverhaltens etc. -> gelten für meisten Demokratien 
+- Morlino und Montero: Wähler der rechten Parteien ließen gegenüber der diffusen Legitimität die geringste Unterstützung erkennen und bewerteten die autoritäre Vergangenheit am günstigsten, Wähler linker Parteien, zeigen konsistent signifikant höhere Unterstützungswerte für die Demokratie als Wähler von Rechtsparteien. 
+- kommunistischen Parteien Europas viel mehr "Antiregierungsparteien", als "Antisystemparteien"
