--- a/uni/Systemtrafo/9_Sitzung-19-01-2018.md
+++ b/uni/Systemtrafo/9_Sitzung-19-01-2018.md
@@ -61,3 +61,40 @@ Verlauf:
 - Regimepartei KMT verlor in keiner Phase die Kontrolle über den Verlauf der Demokratisierung
 
 ## 9.3 Der langsame Institutionalisierungsprozess der Demokratie
+Verfassungsgebung erstreckte sich über mehr als 5 Jahre in 4 voneinander abgrenzbaren Etappen
+- es handelte sich bei der Institutionalisierung der Demokratie um einen inkrementellen Revisionsprozess, an dessen Ende nicht eine neue demokr. Verfassung, sondern ein mit Zusatzartikeln ergänztes & demokratisiertes Grundgesetz stand
+
+Demokratisierung verlief als Abfolge konsensorientierter Verhandlungen zw KMT u DFP
+- durchgehendes Muster: von Opposition thematisierte pol Reformvorhaben wurden von KMT aufgegriffen & implementiert
+- spezifisch institutionelle Ergebnisse der Demokratisierung (die sich in 4 Verfassungsergänzungen 1991, 1992, 1994, 1997) waren v.a. das Resultat von Auseinandersetzung zw versch. ideologischen Flügeln innerhalb der KMT
+
+1. Phase der Institutionalisierung (1989 - 1991)
+- insbesondere Beantwortung der Frage nach dem rechtl. Status der alten demokr nicht legitimierten Staatsorgane
+- Verabschiedung des erstens Verfassungszusatzes durch die alte Nationalversammlung schuf die konstitutionelle Rahmenbedingungen für die Auflösung der demokr. nicht legitimierte verfassungsgebende Kammer (Nationalversammlung), sowie der gesetzgebenden Versammlung (Legislatiyuan)
+- Entfall der meisten autoritären Einschränkungen der bürgerl & pol Rechte aus der Nachbürgerkriegszeit
+- mit ersten freien Wahlen zur Nationalversammlung im Dezember 1991, die die KMT klar gewann, begann die zweite Phase der Institutionalisierung der Demokratie
+- von nun an erfolgten alle weiteren Schritte der Verfassungsgebung in der mit einem demokr Mandat ausgestatteten Nationalversammlung
+
+
+2. Phase der Institutionalisierung (1992)
+- pol Diskussion drehte sich v.a. um zukünftige Gestalt des Regierungssystems
+  - erneut setzten sich alten Regimeeliten ggü Opposition durch
+	- DFP scheiterte mit Forderung nach Abschaffung des "Fünf-Gewalten" Systems zugusnten einer klassischen "Drei-Gewalten" Ordnung
+- zweiter Verfassungszusatz konkretisierte vor allem die Kompetenzabgrenzung zwischen Staatspräsident & Premier sowie zw. Legislativyuan & Nationalversammlung
+  - Neuwahl des Legislativyuan im Dez 1992 markierte Abschluss dieser Etappe + Gründungswahlen der Demokratie
+  
+3. Phase der Institutionalisierung (1993 - 1996)
+- Präsidentschaftsfrage rückte in den Mittelpunkt nachdem nun die pol Grundstrukturen etabliert waren & die beiden vom Volk gewählten parl Organe über eine demokr Legitimation verfügten
+- KMT stimmte oppositioneller Forderung nach einer direkten Volkswahl des bislang von der Nationalversammlung gewählten Staatspräsidenten zu
+  - Präsidentschaftswahl vom März 1996 bestätigte Lee Teng-hui (KMT) in seinem Amt (letzter Akt der dritten Phase)
+  - de facto Zugang somit zu pol Entscheidungspositionen noch vor Abschluss der Verfassungsrevision demokratisiert
+	- hier wird erneut deutlich, dass sich Phasen der demokr Institutionalisierung & der Konsolidierung in Taiwan besonders stark überlappen (bestimmte Teilregime bereits im Stadium der Konsolidierung, obwohl Verfassungsgebung noch nicht vollständig abgeschlossen)
+
+4. Phase der Institutionalisierung (1997)
+- vierter Verfassungszusatz vom 21.Juli 1997 beendete schließlich institutionelle Neuordnung des pol Systems
+- "Fünf-Gewalten" Regierungssystem der Republik China, blieb in Grundstrukturen erhalten:
+  - Exekutivyuan = oberstes Exekutivorgan des Staates, umfasst im Wesentlichen den Premierminister + das Kabinett (Rat des Exekutivyuan)
+  - Legislativyuan = oberstes Gesetzgebungsorgan des Staates
+  - Kontrollyuan = Art oberster Rechnunshof
+  - Judikativyuan = oberstes Rechtssprechungsorgan des Staates
+  - Prüfungsyuan = oberste Behörde zur Beamtenauswahl
